Creating The First Commit

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<section class="alt">
 				<h3>Contact</h3>
 				<p>MohammedAbdelalim14@gmail.com</p>
-				<p><a href="https://drive.google.com/file/d/1Nra4LPLwjjIBtt20DGavHYhaFPWUnplJ/view?usp=sharing">Resume</p>
+				<p><a target="_blank" href="https://drive.google.com/file/d/1Nra4LPLwjjIBtt20DGavHYhaFPWUnplJ/view?usp=sharing">Resume</p>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/mohammed-abdelalim-ali/" target="_blank"
 							class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
