Adding Eng. Ahmed Eldeep Course

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<article class="post featured">
 				<header class="major">
 					<h2><a>IMT ARM Based Embedded Systems Diploma</a></h2>
-					<p>In this diploma, we dig through the ARM architecture, investigate STM32 microcontroller, some of its core peripherals, bootloader implementation overview, try 							out some intersting applications such as playing sounds with DAC, performing IR communication, interfacing with TFT touch screen, connecting microcontroller 								to web server and communicating the controller over HTTP protocol.
+					<p>In this diploma, we dig through the ARM architecture, investigate STM32F1 microcontroller, some of its core peripherals, bootloader implementation overview, try 							out some intersting applications such as playing sounds with DAC, performing IR communication, interfacing with TFT touch screen, connecting microcontroller 								to web server and communicating the controller over HTTP protocol.
 						</p>
 				</header>
 				<a class="image main"><img src="images/ARM-DIPLOMA.jpg" alt="" /></a>
@@ -75,6 +75,24 @@
 							class="button large">View Some of my Diploma Codes</a></li>
 					<li><a href="https://drive.google.com/file/d/1VwF__0_RKIpmyx9MHTP5rbd3oRl5iK5E/view?usp=sharing" target="_blank"
 							class="button large">View Diploma Contents</a></li>
+				</ul>
+			</article>
+		</div>
+
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2><a>STM32 ARM Cortex-M4 Programming Course</a></h2>
+					<p>This awesome and well prepared Youtube course presented by Eng. Ahmed Eldeep digs into deep details of many interesting basic and advanced technologies in the 							STM32F4 microcontroller family. I've recently started watching and sharing the notes that I take from selected subjects.</p>
+				</header>
+				<a class="image main"><img src="images/STM32.jpg" alt="" /></a>
+				<ul class="actions special">
+					<li><a href="https://www.youtube.com/playlist?list=PLPFp2zIiTnxXjxS-tC0u6m5zuSSJ1NLFw"
+							target="_blank" class="button large">Course on Youtube</a></li>
+					<li><a href="https://www.notion.so/STM32-Eng-Ahmed-Eldeep-Youtube-fbf0a5d2daf84393b2b361ef493a53db"
+							target="_blank" class="button large">View my Course Notes</a></li>
 				</ul>
 			</article>
 		</div>
