Adding Eng. Ahmed Eldeep Course

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<article class="post featured">
 				<header class="major">
 					<h2><a>STM32 ARM Cortex-M4 Programming Course</a></h2>
-					<p>This awesome and well prepared Youtube course presented by Eng. Ahmed Eldeep digs into deep details of many interesting basic and advanced technologies in the 							STM32F4 microcontroller family. I've recently started watching and sharing the notes that I take from selected subjects.</p>
+					<p>This awesome and well prepared Youtube course presented by Eng. Ahmed Eldeep digs into deep details of many interesting basic and advanced technologies in the 							STM32F4 microcontroller family. I've recently started watching and sharing the notes that I take from selected subjects of the course, more course notes are 							regularly added so please come by from time to the other. </p>
 				</header>
 				<a class="image main"><img src="images/STM32.jpg" alt="" /></a>
 				<ul class="actions special">
