Adding E SW Design MC

--- a/index.html
+++ b/index.html
@@ -59,14 +59,32 @@
 
 		<!-- Main -->
 
+		<!-- E SW Design MC -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2><a>Embedded Software Design Masterclass</a></h2>
+					<p>In this Sprints masterclass, we start by discussing the spaghetti code and its effects on the project as well as some industrial coding tricks and practices, 							then discussing the modular programming and SW development lifecycle, and digging through the details of the static and dynamic design.
+						</p>
+				</header>
+				<a class="image main"><img src="images/Embedded-SW-Design.jpg" alt="" /></a>
+				<ul class="actions special">
+					<li><a href="https://drive.google.com/file/d/1C1e_m9L7ztkm2ton1IsoyHM4pG2Uydxh/view?usp=sharing" target="_blank"
+							class="button large">View Course Syllabus</a></li>
+					<li><a target="_blank" class="button large">View My Tasks (Coming Soon)</a></li>
+				</ul>
+			</article>
+		</div>
 		<!-- IMT ARM Diploma -->
 		<div id="main">
 
 			<!-- Featured Post -->
 			<article class="post featured">
 				<header class="major">
-					<h2><a>IMT ARM Based Embedded Systems Diploma</a></h2>
-					<p>In this diploma, we dig through the ARM architecture, investigate STM32F1 microcontroller, some of its core peripherals, bootloader implementation overview, try 							out some intersting applications such as playing sounds with DAC, performing IR communication, interfacing with TFT touch screen, connecting microcontroller 								to web server and communicating the controller over HTTP protocol.
+					<h2><a>ARM Based Embedded Systems Diploma</a></h2>
+					<p>In this IMT-school diploma, we dig through the ARM architecture, investigate STM32F1 microcontroller, some of its core peripherals, bootloader implementation 							overview, try out some intersting applications such as playing sounds with DAC, performing IR communication, interfacing with TFT touch screen, connecting 							microcontroller to web server and communicating the controller over HTTP protocol.
 						</p>
 				</header>
 				<a class="image main"><img src="images/ARM-DIPLOMA.jpg" alt="" /></a>
