--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div id="intro">
 			<h1>Mohammed Abdelalim <br/>
 				Portfolio</h1>
-			<p>Hello, I'm a fresh graduate embedded software engineer based in Cairo, Egypt.<br/>
+			<p>Hello, I'm a mid-level embedded software engineer with a focus on Automotive based in Cairo, Egypt.<br/>
 				This portfolio shows more about me, my projects and courses that I've learned as well as those that I documented. I find sharing my notes could help others on their 
 				learning journey. Hope you enjoy it ^_^</p>
 			<ul class="actions">
@@ -58,6 +58,45 @@
 		</nav>
 
 		<!-- Main -->
+
+
+		<!-- QNX -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2><a>Introduction to QNX Neutrino Architecture</a></h2>
+					<p>In this rich course, we start by introducing the QNX micro-kernel architecture, then we proceed with QNX's security policies, processes, threads, synchronization, inter-process communication, timers and clocks, resource managers. It's a crash course with high density of information.
+				</header>
+				<a class="image main"><img src="images/qnx-soc.jpg" alt="" /></a>
+				<ul class="actions special">
+					<li><a href="https://learning.qnx.com/qnx/courses/20207" target="_blank"
+							class="button large">Course Syllabus (Requires Sign-up)</a></li>
+					<li><a href="https://drive.google.com/file/d/1YeQosrP4Fh5uZzc0yklOqrReV775xjsP/view?usp=sharing" target="_blank" class="button large">View My Certificate</a></li>
+				</ul>
+			</article>
+		</div>
+
+
+		<!-- LLMs -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2><a>Generative AI With LLMs</a></h2>
+					<p>In this course, we start by learning the fundamentals of how generative AI works, then get to know LLM-based generative AI lifecycle, from data gathering and model selection, to performance evaluation and model optimization, finishing with deploying it in real-world applications. 
+						we get to know more about prompt engineering, fine-tuning, RAG, and many more interesting topics.
+				</header>
+				<a class="image main"><img src="images/DeepLearning_GenAI_with_LLMs.png" alt="" /></a>
+				<ul class="actions special">
+					<li><a href="https://www.coursera.org/learn/generative-ai-with-llms/" target="_blank"
+							class="button large">Course Syllabus</a></li>
+					<li><a href="https://www.coursera.org/account/accomplishments/verify/8IECP489M2MI" target="_blank" class="button large">View My Certificate</a></li>
+				</ul>
+			</article>
+		</div>
 
 		<!-- E SW Design MC -->
 		<div id="main">
